Retroactively added entry for 2.0.4 release (how did I forget it?)
svn path=/software/LOOS/trunk/; revision=10035

--- a/ChangeLog
+++ b/ChangeLog
@@ -73,6 +73,9 @@
 	* Changed XDR class, refactoring it into XDRReader (which takes an
 	istream) and XDRWriter (which takes an ostream)
 
+2013-04-03 <tromo@hill.urmc-sh.rochester.edu>
+	* Released 2.0.4
+
 2013-04-01    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Changed build procedure(s).  To build pyloos, use "scons
