--- a/README
+++ b/README
@@ -3,6 +3,38 @@
 =     https://lists.sourceforge.net/lists/listinfo/loos-announce              =
 ===============================================================================
 
++++NOTICE+++
+
+Our email address has changed.  Please use <loos.maintainer@gmail.com>
+to contact us regarding LOOS.
+
++++NOTICE+++
+
+
+   * RELEASE 2.0.5 *
+
+This release is primarily a maintenance release consisting of internal
+changes, a few bug fixes, and a few added or changed tools.  There is
+one major change, however, in the setup scripts (setup.sh and
+setup.csh).  Previously LOOS directories were appended to the
+appropriate environment variables (e.g. PATH, LD_LIBRARY_PATH, etc).
+Now, these directories are prepended.
+
+New tools include the transition_contacts tool (time series of
+transition between two structures) and serialize-selection tool
+(transforms a trajectory containing multiple molecules into a longer
+trajectory with a single molecule).  We have also added fcontacts,
+which should replace contact-time.  Bug fixes include gmxdump2pdb,
+native_contacts, and renum-pdb.
+
+The principal internal changes affect the iterative alignment and
+averaging functions (these no longer cache the trajectory), and the
+API for both trajectories and structures has changed slightly, taking
+an istream rather than an ifstream object.
+
+For more details, see the ChangeLog file included with LOOS.
+
+
    * RELEASE 2.0.4 *
 
 This release includes a number of bug fixes and important changes.  An
