--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-06-25    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed potential bug in DCD reader nstep was used internally in
+	place of nfile.
+	* Fixed bug when instantiating DCD files with nfile==0 so it
+	doesn't immediately throw an error.
+	* Added fixdcd tool to update a DCD header (in-place) with the
+	correct # of frames.
+
 2013-06-18    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Changed rmsd2ref so that it no longer caches trajectory frames
