--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-07-03    <alan@membrane.urmc.rochester.edu>
+
+    * Added change to cross-dist.  Disambiguate sign of PCA vectors
+	  by checking against end-to-end vector.  Code (and idea) courtesy of 
+	  Jerome Henin.
+
 2013-07-01    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed gmxdump2pdb.pl to NOT use hybrid-36 encoding for the
