Added link to Alan's presentation
svn path=/software/LOOS/trunk/; revision=10355

--- a/loos.dox
+++ b/loos.dox
@@ -19,6 +19,7 @@ Our email address has changed.  Please use loos.maintainer@gmail.com to contact 
 <h2>Quick Links</h2>
       -  <a href="http://sourceforge.net/projects/loos">Download LOOS at http://sourceforge.net/projects/loos</a>
       -  <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">Subscribe to the mailing list</a>
+      -  <a href="http://sourceforge.net/projects/loos/files/loos%20material/loos_talk_2013.pdf/download">Download a presentation (pdf) on using LOOS</a>
       -  Ask the developers a question at loos.maintainer@gmail.com
       - \subpage building "Building LOOS"
           - \ref building_pyloos "Building PyLOOS, the Python Interface to LOOS"
