--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-07-19    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Added link to tutorial on LOOS in documentation
+
 2013-07-03    <alan@membrane.urmc.rochester.edu>
 
     * Added change to cross-dist.  Disambiguate sign of PCA vectors
