Ubuntu naming issues...
Why do they have to change the name of packages with every friggin' release?
Why does it have to be -dev once and -devel the next, then revert back
to -dev?  Pick one and stick with it!  Grrr...

svn path=/software/LOOS/trunk/; revision=10577

--- a/INSTALL
+++ b/INSTALL
@@ -176,7 +176,7 @@ the Ubuntu software center (or apt-get) to install the following
 packages:
 	g++ (GNU C++ compiler)
 	scons (replacement for make)
-	libboost-all-devel (Boost C++ Libraries development files (ALL))
+	libboost-all-dev [or libboost-all-devel] (Boost C++ Libraries development files (ALL))
 	libatlas-dev (Automatically Tunes Linear Algebra Software, C Header Files)
 	libatlas-base-dev (Automatically Tuned Linear Algebra Software)
 	libnetcdf-dev [optional] (Development kit for Netcdf)
