--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-08-20    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bug with XTC trajectories when the system contains too
+	few atoms (<= 9).  Gromacs does not compress the coordinates, but
+	LOOS expected all system sizes to have compression.
+
 2013-08-15    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Changed installation to now include python scripts if pyloos is
