--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-22    <alan_grossfield@membrane.urmc.rochester.edu>
+    * Added new flag to rdf to allow the two selections to be split using
+	  different methods.
+
 2013-08-20    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bug with XTC trajectories when the system contains too
