Changed loos contact email to loos.maintainer@gmail.com (under bugs section...how did I miss this before???)
svn path=/software/LOOS/trunk/; revision=10692

--- a/loos.dox
+++ b/loos.dox
@@ -101,7 +101,7 @@ their centroid or moments of inertia).
 
 \section Bugs
 There are none...only features.  So don't worry about them!
-Email us directly (LOOS-maintainer [AT] urmc.rochester.edu) if you find a bug^H^H^H unintended feature.
+Email us directly (loos.maintainer [AT] gmail.com) if you find a bug^H^H^H unintended feature.
 
 \section future Future Plans
 
