--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-10-01    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Added smooth-traj tool for smoothing trajectories
+
 2013-09-13  Tod Romo  <tromo@Gorgoneion.local>
 
 	* Released 2.0.6
