--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
 	atom index information.  This affects primarily the PDB-based
 	trajectory classes which used to ignore atom metadata if the
 	passed AtomicGroup was the same size as the trajectory frame.
+	* Changed updateGroupCoords() to use NVI idiom.  Now calls
+	updateGroupCoordsImpl() in the derived classes.
 
 2013-10-01    <tromo@hill.urmc-sh.rochester.edu>
 
